# drone

control/: .package.xml.swo  .package.xml.swp  CMakeLists.txt  package.xml
control/launch/:  move_base.launch  amcl.launch.xml  control.launch  gLaunch.launch  move.txt  move_base_custom.launch
control/src/: collector.cpp  height_loop.cpp  stabilisation.cpp
drone/: model.config  model.sdf
