<?xml version="1.0"?>
<package format="2">
  <name>control</name>
  <version>0.1.0</version>
  <description>The control package</description>

  <maintainer email="ros46@aber.ac.uk">Your Name</maintainer>
  <license>BSD</license>
  <author email="ros46@aber.ac.uk">Jane Doe</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

</package>




















